# text_matrix

./: .clang-format  CMakeLists.txt  README.md
include/: BasePainter.hpp  CursesEnvironment.hpp  MatrixPainter.hpp  Window.hpp
src/: BasePainter.cpp  CursesEnvironment.cpp  MatrixPainter.cpp  Window.cpp  main.cpp
